--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/arangodb": "^3.5.22",
     "@types/getenv": "^1.0.3",
     "@types/koa": "^2.15.0",
+    "@types/koa-conditional-get": "^2.0.3",
+    "@types/koa-etag": "^3.0.3",
     "@types/koa-pino-logger": "^3.0.4",
     "@types/koa-router": "^7.4.8",
     "@types/koa-static": "^4.0.4",
@@ -40,6 +42,8 @@
     "ioredis": "^5.4.1",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
+    "koa-conditional-get": "^3.0.0",
+    "koa-etag": "^4.0.0",
     "koa-pino-logger": "^4.0.0",
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
